--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
     <header class="jumbotron">
         <div class = "container">
             <div class = "row row-header">
-                <div class = "col-12 col-sm-8">
+                <div class = "col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid" alt="logo">
+                </div>
+                <div class="col-12 mt-5 mt-sm-0 col-sm-3 text-center align-self-center">
+                    <a href="#reservation" type="button" class="btn btn-sm btn-warning">Reserve table</a>
                 </div>
             </div>
         </div>
@@ -58,16 +61,14 @@
 
     <div class = "container">
         <div class = "row row-content align-items-center">
-            <div class = "col-sm-4 col-md-3 flex-last">
+            <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div class="col-sm col-md flex-first">
-                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+            <div class="col-sm col-md order-sm-first">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center"
-                            src="img/uthappizza.png" alt="Uthappizza">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">
                             A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
@@ -81,23 +82,31 @@
 
 
         <div class = "row row-content align-items-center"> 
-            <div class = "col-sm-4 col-md-3  flex-last">
+            <div class = "col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col-sm col-md flex-first">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-sm col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">
+                            Featuring mouthwatering combinations with a choice of five different salads, 
+                            six enticing appetizers, six main entrees and five choicest desserts. Free 
+                            flowing bubbly and soft drinks. All for just $19.99 per person
+                        </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
         <div class = "row row-content align-items-center">
-            <div class = "col-sm-4 col-md-3 flex-last">
+            <div class = "col-sm-4 col-md-3 order-sm-last">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-sm col-md flex-first">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center"
-                            src="img/alberto.png" alt="Alberto Somayya">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -111,9 +120,65 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content justify-content-center" id="reservation">
+            <div class="col-12">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-2">Number of Guests</label>
+                                <div class="col">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="OneG_Radio" value="one">
+                                        <label class="form-check-label" for="OneG_Radio">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="twoG_Radio" value="two">
+                                        <label class="form-check-label" for="twoG_Radio">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="threeG_Radio" value="three">
+                                        <label class="form-check-label" for="threeG_Radio">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="fourG_Radio" value="four">
+                                        <label class="form-check-label" for="fourG_Radio">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="fiveG_Radio" value="five">
+                                        <label class="form-check-label" for="fiveG_Radio">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="sixG_Radio" value="six">
+                                        <label class="form-check-label" for="sixG_Radio">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-2">Date and Time</label>
+                                <div class="col-12 col-sm-4">
+                                    <input type="date" class="form-control" id="date">
+                                </div>
+                                <div class="col-12 col-sm-4">
+                                    <input type="time" class="form-control" id="time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col offset-0 offset-sm-2">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
-    <footer>
+    <footer class="footer">
         <div class = "container">
             <div class = "row">             
                 <div class="col-5 col-sm-2">
